# yowcode

./: .gitignore  Cargo.toml  FEATURE_COMPARISON.md  IMPLEMENTATION_STATUS.md  LICENSE  Makefile  QUICK_START.md  README.md  config.example.toml  install.sh
.github/workflows/: deploy.yml
cli/: Cargo.toml
cli/src/: main.rs  tools.rs
core/: Cargo.toml
core/src/: agent.rs  ai.rs  commands.rs  config.rs  context.rs  database.rs  error.rs  executor.rs  lib.rs  mcp.rs  memory.rs  message.rs  runs.rs  session.rs  skill.rs  tool.rs  tools.rs  types.rs
examples/: basic_usage.sh
web/: Cargo.toml
web/src/: handlers.rs  main.rs
