[package]
name = "yowcode"
version.workspace = true
edition.workspace = true

[[bin]]
name = "yow"
path = "src/main.rs"

[dependencies]
yowcode-core = { path = "../core" }

tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }

# CLI
clap = { workspace = true }
crossterm = { workspace = true }
ratatui = { workspace = true }

# Async
async-trait = { workspace = true }
futures = { workspace = true }

# Tools
regex = "1.11"
walkdir = { workspace = true }
