[package]
name = "yowcode-core"
version.workspace = true
edition.workspace = true

[dependencies]
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sqlx = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
reqwest = { workspace = true }
async-trait = { workspace = true }
futures = { workspace = true }
bytes = { workspace = true }
walkdir = { workspace = true }
ignore = { workspace = true }
tokio-tungstenite = { workspace = true }
toml = "0.8"
dirs = "5.0"
regex = "1.10"
urlencoding = "2.1"
glob = "0.3"

[dev-dependencies]
tokio = { workspace = true, features = ["test-util", "macros"] }
