[package]
name = "yowcode-web"
version.workspace = true
edition.workspace = true

[[bin]]
name = "yowcode-web"
path = "src/main.rs"

[dependencies]
yowcode-core = { path = "../core" }

tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
uuid = { workspace = true, features = ["serde"] }
chrono = { workspace = true, features = ["serde"] }

# Web
axum = { workspace = true }
axum-extra = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }
hyper = { workspace = true }

# Async
async-trait = { workspace = true }
futures = { workspace = true }
tokio-tungstenite = { workspace = true }

# Templating
askama = { workspace = true }

# Config
toml = { workspace = true }
dirs = { workspace = true }
